Updating layouts and adding page title variables

--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,5 +1,5 @@
 <%= link_to("<< Back to List", sections_path, :class => 'back-link') %>
-
+<% @page_title = "Edit #{@section.name}" %>
 <div class="sections edit">
   <h2>Update Section</h2>
 
