--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,3 +1,4 @@
+<% @page_title = "Edit #{@page.name}" %>
 <%= link_to("<< Back to List", pages_path, :class => 'back-link') %>
 
 <div class="pages edit">
