--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,9 +1,4 @@
-
-<% if !flash[:notice].blank? %>
-  <div class="notice">
-    <%= flash[:notice] %>
-  </div>
-<%end %>
+<% @page_title = "Show #{@subject.name}" %>
 <%= link_to("<< Back to List", subjects_path, :class => 'back-link') %>
 
 <div class="subjects show">
