--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -6,24 +6,7 @@
 
   <%= form_for(@subject) do |f| %>
 
-    <table>
-      <tr>
-        <th>Name</th>
-        <td><%= f.text_field(:name) %></td>
-      </tr>
-      <tr>
-        <th>Position</th>
-        <td><%= f.text_field(:position) %></td>
-      </tr>
-      <tr>
-        <th>Visible</th>
-        <td><%= f.text_field(:visible) %></td>
-      </tr>
-    </table>
-
-    <div class="form-buttons">
-      <%= f.submit("Update Subject") %>
-    </div>
+    <%= render(:partial => 'form', :locals => {:f => f}) %>
 
   <% end %>
 </div>
