Adding custom helper

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -31,7 +31,7 @@
     </tr>
     <tr>
       <th>Created</th>
-      <td><%= @section.created_at %></td>
+      <td><%= @section.created_at.to_s(:long) %></td>
     </tr>
     <tr>
       <th>Updated</th>
