--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -7,6 +7,9 @@
   <%= form_for(@subject) do |f| %>
 
     <%= render(:partial => 'form', :locals => {:f => f}) %>
+    <div class="form-buttons">
+      <%= f.submit("Update Subject") %>
+    </div>
 
   <% end %>
 </div>
