--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CMS : <%= @page_title || "Admin Area" %></title>
-  <style>
-      span.status { display: block; width: 10px; height: 10px;
-          margin: 0.25em auto; padding: 0; border: 1px solid #000000; }
-      span.status.true  { background: green; color: green; }
-      span.status.false { background: red; color: red; }
-  </style>
+  <title>Simple CMS: <%= @page_title || "Admin Area" %></title>
+  <%= stylesheet_link_tag('admin', :media => 'all') %>
 </head>
-  <body>
-    <!--    before yield-->
-    <% if !flash[:notice].blank? %>
+<body>
+
+<div id="header">
+  <h1>Simple CMS Admin</h1>
+</div>
+<div id="main">
+  <% if !flash[:notice].blank? %>
     <div class="notice">
       <%= flash[:notice] %>
     </div>
   <% end %>
+
+  <div id="content">
     <%= yield %>
-    <!--    after yield-->
-  </body>
+  </div>
+</div>
+<div id="footer">
+  <p id="copyright">&copy; testing.com</p>
+</div>
+</body>
 </html>
