Adding form helpers and form errors

--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -10,7 +10,7 @@
       <td><%= @section.name %></td>
     </tr>
     <tr>
-      <th>Page ID</th>
+      <th>Page</th>
       <td><%= @section.page_id %></td>
     </tr>
     <tr>
