--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -7,7 +7,7 @@
   <table class="listing" summary="Section list">
     <tr class="header">
       <th>#</th>
-      <th>Page ID</th>
+      <th>Page</th>
       <th>Section</th>
       <th>Visible</th>
       <th>Actions</th>
